--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
       <p>Accessed via <b>Puncture Config</b>, this is the most complex and important section. It defines HOW and WHERE the macro looks for critical damage.</p>
       <h4>Tab: Detection Area & Filters</h4>
       <ul>
-        <li><b>FindText Search Area (<code>puncture_x1</code>, <code>y1</code>, <code>x2</code>, <code>y2</code>):</b> Defines a rectangle on the screen where the script will search. Use the <b>Get</b> button to draw this area precisely over where the critical damage text appears in your game. The smaller the area, the faster the detection.</li>
+        <li><b>FindText Search Area (<code>x1</code>, <code>y1</code>, <code>x2</code>, <code>y2</code>):</b> Defines a rectangle on the screen where the script will search. Use the <b>Get</b> button to draw this area precisely over where the critical damage text appears in your game. The smaller the area, the faster the detection.</li>
         <li><b>Ccrit & Lcrit Pattern:</b> These are the "codes" that FindText uses to recognize the images of the critical damage text. They must be captured using the FindText tool (<b>Open FindText</b> button).</li>
         <li><b>Filter Settings:</b> Optimizations to speed up the search.
             <ul>
